# dzip

./: README.md  requirements-dev.txt  requirements.txt  setup.cfg
dzip/: __init__.py  dzip.py
tests/: conftest.py  test_dzip.py
