[metadata]
name = dzip
description = A csv and json implementation of labeled data files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nachomaiz/dzip
download_url = https://github.com/nachomaiz/dzip
version = file: VERSION
author = Ignacio Maiz Vilches
author_email = ignacio.maiz@bavgroup.com
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
install_requires = 
    pandas
    pyreadstat; python_version >= "3.10"

[options.packages.find]
exclude = test*
